--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title> HOME | Basic HTML Website</title>
-	</head>
-	<body>
-		 
-	</body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kontaktbok</title>
+</head>
+<body>
+	<h1>Kontaktbok</h1>
+	<a href="viktor.falkesjo.html">Viktor Falkesjö</a>
+	
+</body>
 </html>
