--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Kontaktbok</h1>
 	<a href="viktor.falkesjo.html">Viktor Falkesjö</a>
+	<br/><a href="Eric.Österberg.HTML">Eric Österberg</a>
 	
 </body>
 </html>
